# app/swagger.yml
@@ -44,6 +44,7 @@ paths:
                   type: string
                   description: User's password
 
+  /signup:
     post:
       operationId: app.views.create_user
       tags:
@@ -99,6 +100,31 @@ paths:
               password:
                 type: string
                 description: User's password
+
+  /login:
+    post:
+      operationId: app.views.login
+      tags:
+        - Login
+      summary: Create a user
+      description: Create a new user
+      parameters:
+        - name: creds
+          in: body
+          description: User's creds'
+          required: True
+          schema:
+            type: object
+            properties:
+              email:
+                type: string
+                description: User's email
+              password:
+                type: string
+                description: User's password
+      responses:
+        200:
+          description: Successfully login
 
   /user/{user_id}:
     get:
