# app/views.py
@@ -1,7 +1,18 @@
-from flask import abort, make_response
+import os
+from datetime import datetime, timedelta
 
+import jwt
+from flask import abort, jsonify, make_response
+
+from app.auth_middleware import token_required
 from app.models import Meme, User, meme_schema, user_schema, users_schema
 from app.settings import db
+
+# from werkzeug.security import check_password_hash
+
+
+TOKEN_EXPIRATION_TIME = int(os.environ["TOKEN_EXPIRATION_TIME"])
+SECRET_KEY = os.environ["APP_SECRET_KEY"]
 
 
 def create_user(user):
@@ -29,19 +40,22 @@ def create_user(user):
         abort(409, f"User with email {email} already exists")
 
 
-def get_users():
+@token_required
+def get_users(*args, **kwargs):
     """
     This function responds to a request for /api/users
     with the complete lists of users
 
     :return: json string of list of users
     """
+    breakpoint()
     all_users = User.query.order_by(User.city).all()
     data = users_schema.dump(all_users)
+
     return data
 
 
-def get_user(user_id):
+def get_user(user_id, *args, **kwargs):
     """
     This function responds to a request for /api/user/{user_id}
     with one matching user from users
@@ -49,8 +63,9 @@ def get_user(user_id):
     :param user_id: Id of user to find
     :return:        user matching id or 404
     """
-    user = User.query.filter(User.id == user_id).one_or_none()
 
+    user = User.query.filter(User.id == user_id).one_or_none()
+    breakpoint()
     if user is not None:
         data = user_schema.dump(user)
         return data
@@ -58,7 +73,7 @@ def get_user(user_id):
         abort(404, f"User with Id:{user_id} doesn't exist")
 
 
-def update_user(user_id, user):
+def update_user(user_id, user, *args, **kwargs):
     """
     This function updates an existing user in users structure
     Throws an error if a user with the email we want to update to
@@ -85,7 +100,7 @@ def update_user(user_id, user):
         return data, 200
 
 
-def delete_user(user_id):
+def delete_user(user_id, *args, **kwargs):
     """
     This function deletes a user from the users structure
 
@@ -104,7 +119,7 @@ def delete_user(user_id):
         abort(404, f"User wasn't found for ID:{user_id}")
 
 
-def create_meme(meme):
+def create_meme(meme, *args, **kwargs):
 
     url = meme.get("url")
 
@@ -122,7 +137,7 @@ def create_meme(meme):
         abort(409, f"Meme with url {url} already exists")
 
 
-def get_meme(meme_id):
+def get_meme(meme_id, *args, **kwargs):
 
     meme = Meme.query.filter(Meme.id == meme_id).one_or_none()
 
@@ -144,3 +159,31 @@ def delete_meme(meme_id):
 
     else:
         abort(404, f"Meme wasn't found for ID:{meme_id}")
+
+
+def login(creds):
+
+    current_user = User.query.filter(User.email == creds["email"]).one_or_none()
+    if not current_user:
+        return make_response(
+            "Could not verify",
+            401,
+            {"WWW-Authenticate": 'Basic realm ="User does not exist !!"'},
+        )
+
+    # if check_password_hash(current_user.password, creds['password']):
+    if current_user.password == creds["password"]:
+        token = jwt.encode(
+            {
+                "id": current_user.id,
+                "exp": datetime.utcnow() + timedelta(seconds=TOKEN_EXPIRATION_TIME),
+            },
+            SECRET_KEY,
+        )
+        breakpoint()
+        return make_response(jsonify({"token": token}))
+    return make_response(
+        "Could not verify",
+        403,
+        {"WWW-Authenticate": 'Basic realm ="Wrong Password !!"'},
+    )
